# free-intelligence

./: .cursorrules  .dockerignore  .env.auth0.example  .env.celery  .env.diarization.example  .env.eval  .env.example  .env.production  .gitattributes  .gitignore  .gitmodules  .importlinter  .markdownlint.json  .mcp.json  .mypy_report.txt  .mypy_top.txt  .npmrc  .pre-commit-config.yaml  .secrets.baseline  .tool-versions  .turborc  =41.0.0  APPOINTMENTS_MODAL_FIX.md  APPOINTMENTS_TROUBLESHOOTING.md  AUDIT_SUMMARY_2025-12-07.md  AZURE-OPENAI-SHARED.md  AZURE_OPENAI_CURL_REFERENCE.md  BOTTLENECK_SUMMARY.txt  CLAUDE.md  COMMIT_TEMPLATE.txt  CRITICAL_ISSUES_ONLY.txt  CRUD_APPOINTMENTS_COMPLETE.md  DEPLOYMENT_AZURE_UNIFIED.md  DEVOPS_STRATEGY.md  DIARIZATION_JOB_HISTORY.md  DIARIZATION_UI_A11Y.md  DIGITALOCEAN_MINI_CERT.md  DOCKER.md  DOCKER_QUICKSTART.md  Dockerfile  (+82 more)
apps/aurity-desktop/src-tauri/: Cargo.toml  build.rs  installer-template.nsi  splashscreen.html  tauri.conf.json
apps/aurity-desktop/src-tauri/.cargo/: config.toml
apps/aurity-desktop/src-tauri/capabilities/: default.json
apps/aurity-desktop/src-tauri/src/: auth.rs  autostart.rs  backend.rs  config.rs  constants.rs  errors.rs  fi_monitor.rs  license.rs  main.rs  ollama.rs  templates.rs  window.rs  wizard.rs  wsl.rs
apps/aurity-desktop/src-tauri/src/auth/: flow.rs  keychain.rs  mod.rs  pkce.rs  tokens.rs
apps/aurity-desktop/src-tauri/src/fi_monitor/: detection.rs  download.rs  errors.rs  install.rs  mod.rs  paths.rs
apps/aurity-desktop/src-tauri/src/license/: commands.rs  crypto.rs  mod.rs  renewal.rs  storage.rs  types.rs
apps/aurity-desktop/src-tauri/src/wsl/: backend.rs  detection.rs  install.rs  mod.rs  paths.rs
apps/aurity-desktop/src-tauri/templates/: fi.policy.yaml
apps/aurity-desktop/src-tauri/templates/personas/: general_assistant.yaml  soap_editor.yaml
apps/fi-monitor/: BENCHMARKING.md  README-testing.md  README.md  UPDATER-SETUP.md  index.html  package.json  pyproject.toml  quick_test.sh  requirements-dev.txt  rust-toolchain.toml  tailwind.config.js  test_rag_ui.py  tunnel-check.json  tunnel-config.yml  verify_setup.sh
apps/fi-monitor/gateway/: __init__.py  main.py
apps/fi-monitor/pyinstaller/: fi-backend-entry.py  fi-backend.spec  requirements.txt  runtime_hook.py
apps/fi-monitor/rag_service/: README.md  __init__.py  annotations.py  auth.py  config.py  gpu.py  main.py  metrics.py  requirements.txt  schemas.py  state.py  test_integration.sh  test_metrics.py  text_processing.py
apps/fi-monitor/rag_service/routes/: __init__.py  documents.py  embed.py  evaluation.py  health.py  query.py  similarity.py  upload.py
apps/fi-monitor/src/: App.tsx  SetupWizard.css  SetupWizard.tsx  main.tsx  styles.css  useSetup.ts
apps/fi-monitor/src-tauri/: Cargo.toml  tauri.conf.json
apps/fi-monitor/src-tauri/capabilities/: default.json
apps/fi-monitor/src-tauri/src/: autostart.rs  benchmarks.rs  config.rs  main.rs  ollama.rs  ollama_installer.rs  python_installer.rs  services.rs  setup_store.rs  state.rs  testing.rs  tunnel.rs  utils.rs
apps/fi-monitor/src-tauri/src/benchmarks/: gateway.rs  mod.rs  ollama.rs  persistence.rs  rag.rs  suite.rs
apps/fi-monitor/src-tauri/src/ollama/: env_vars.rs  health.rs  lifecycle.rs  mod.rs  models.rs
apps/fi-monitor/src-tauri/src/ollama_installer/: detection.rs  install.rs  mod.rs
apps/fi-monitor/src-tauri/src/python_installer/: detection.rs  install.rs  mod.rs
apps/fi-monitor/src-tauri/src/services/: gateway.rs  mod.rs  rag.rs  sidecar.rs
apps/fi-monitor/src-tauri/src/setup_store/: commands.rs  mod.rs  persistence.rs
apps/fi-monitor/src-tauri/src/testing/: llm.rs  mod.rs  rag.rs  status.rs
apps/fi-monitor/src-tauri/src/tunnel/: cloudflared.rs  commands.rs  local.rs  mod.rs  upload.rs  (+1 more)
apps/fi-monitor/src/components/: BenchmarkCharts.tsx  EnvVarEditor.tsx  LogsViewer.tsx  ModelChart.tsx  ModelManager.tsx  QRCodeViewer.tsx  RecentCalls.tsx  SourceConfig.tsx  StatsCards.tsx  StatusCard.tsx  TestSuiteLibrary.refactored.tsx  TestSuiteLibrary.tsx  TestSuiteLibrary.tsx.backup
apps/fi-monitor/src/hooks/: useBenchmarks.ts  useLLMTesting.ts  useServiceStatus.ts  useTunnelConfig.ts
apps/fi-monitor/src/lib/: constants.ts  tauri-adapter.ts
apps/fi-monitor/src/mocks/: tauri.ts
apps/fi-monitor/src/types/: datatables.d.ts  monitor.ts
apps/fi-monitor/test_data/: README.md  convert_to_pdf.py  sample_medical_note.txt
apps/fi-monitor/tests/: conftest.py
backend/fi_storage/: pyproject.toml
backend/fi_storage/infrastructure/hdf5/: corpus_ops.py
backend/infrastructure/auth/: __init__.py  dependencies.py  pyproject.toml
backend/infrastructure/auth/adapters/: __init__.py  fastapi_adapter.py
backend/infrastructure/auth/api/: auth_routes.py
backend/infrastructure/auth/domain/: constants.py
backend/infrastructure/auth/infrastructure/: __init__.py
backend/infrastructure/auth/interfaces/: __init__.py  iauth0_management.py
backend/infrastructure/auth/services/: auth0_management.py  gatekeeper.py  local_auth_provider.py  local_token_service.py  password_service.py  user_service.py
backend/infrastructure/auth/tests/: test_jwt_validator.py  test_rbac.py
backend/infrastructure/auth/utils/: __init__.py  clinic_access.py
backend/src/fi_devtools/: README.md  cli.py  pyproject.toml
backend/src/fi_devtools/analysis/: analyze_tier1_errors.py  detect_type_errors.py  import_graph.py  inspect_corpus.py  inspect_h5.py  type_check_parsers.py
backend/src/fi_devtools/ci/: verify_policy.py
backend/src/fi_devtools/lint/: backend_fix_unused_imports.py  backend_fix_utc_imports.py  fix_broken_type_ignores.py  fix_implicit_string_concat.py  fix_missing_imports.py  fix_status_code_literals.py  fix_type_ignores.py  fix_unused_vars.py  remediate_type_errors.py  remove_unnecessary_type_ignores.py
backend/src/fi_devtools/migrate/: migrate_corpus_to_session.py  migrate_hdf5_to_swmr.py  migrate_jobs_to_tasks.py
backend/src/fi_devtools/recovery/: recover_missing_chunks.py  transcribe_missing_chunks_direct.py
backend/src/fi_devtools/tests/: test_cli_smoke.py
(+3880 files in other folders)
