[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "free-intelligence"
version = "0.3.0"
description = "Local-first AI consultation system with event sourcing and SOAP notes"
readme = "README.md"
requires-python = ">= 3.14"
license = {text = "MIT"}
authors = [
    {name = "Bernard Uriza Orozco", email = "bernard.uriza@example.com"}
]
keywords = ["ai", "event-sourcing", "medical", "soap", "local-first"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.14",
]

dependencies = [
    "h5py>=3.14.0",
    "structlog>=25.4.0",
    "PyYAML>=6.0.0",
    "pydantic>=2.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.38.0",
    "python-multipart>=0.0.6",
    "anthropic>=0.74.1",
    "ollama>=0.6.0",
    "sentence-transformers>=5.1.2",
    "torch>=2.9.1",
    "transformers>=4.57.1",
    "jsonschema>=4.20.0",
    "python-dateutil>=2.8.2",
    "py-trello>=0.20.0",
    "pyarrow>=14.0.0",
    "httpx>=0.27.0",
    "aiohttp>=3.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.1",
    "pytest-cov>=6.0.0",
    "pytest-asyncio>=0.25.0",
    "black>=24.0.0",
    "ruff>=0.9.0",
    "mypy>=1.14.0",
    "pre-commit>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/BernardUriza/free-intelligence"
Repository = "https://github.com/BernardUriza/free-intelligence.git"
Documentation = "https://github.com/BernardUriza/free-intelligence/tree/main/docs"

[tool.setuptools]
packages = ["backend", "apps"]

[tool.black]
line-length = 100
target-version = ["py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | node_modules
)/
'''

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["backend"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/node_modules/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
fail_under = 70.0

[tool.coverage.html]
directory = "htmlcov"

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
check_untyped_defs = true
no_implicit_optional = true
warn_incomplete_stub = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_untyped_calls = false
ignore_missing_imports = true
plugins = []

[[tool.mypy.overrides]]
module = [
    "h5py.*",
    "faster_whisper.*",
    "ffmpeg.*",
    "sentence_transformers.*",
    "ollama.*",
    "anthropic.*",
]
ignore_missing_imports = true

[tool.pyright]
include = ["backend", "tests"]
exclude = ["**/__pycache__", ".venv", "node_modules"]
typeCheckingMode = "standard"
reportMissingTypeStubs = false
reportMissingImports = false
reportOptionalMemberAccess = false
reportOptionalSubscript = false
reportPrivateUsage = false
pythonVersion = "3.14"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "SIM", "ARG", "RUF"]
ignore = ["E501", "UP006", "UP007"]  # UP006/007: allow PEP 604 unions (str | None)
typing-modules = ["typing"]

[tool.ruff.lint.isort]
known-first-party = ["backend"]
section-order = ["future", "standard", "third-party", "first-party", "local-folder"]
