[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "free-intelligence"
version = "0.3.0"
description = "Local-first AI consultation system with event sourcing and SOAP notes"
readme = "README.md"
requires-python = ">=3.14"
license = {text = "MIT"}
authors = [
    {name = "Bernard Uriza Orozco", email = "bernard.uriza@example.com"}
]
keywords = ["ai", "event-sourcing", "medical", "soap", "local-first"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.14",
]

dependencies = [
    "h5py>=3.14.0",
    "structlog>=25.4.0",
    "PyYAML>=6.0.0",
    "pydantic>=2.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.38.0",
    "python-multipart>=0.0.6",
    "anthropic>=0.74.1",
    "ollama>=0.6.0",
    "sentence-transformers>=5.1.2",
    "torch>=2.9.1",
    "transformers>=4.57.1",
    "jsonschema>=4.20.0",
    "python-dateutil>=2.8.2",
    "py-trello>=0.20.0",
    "pyarrow>=14.0.0",
    "httpx>=0.27.0",
    "aiohttp>=3.9.0",
    # Knowledge Base document extraction (FI-API-FEAT-020)
    "pdfplumber>=0.11.0",
    "python-docx>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.1",
    "pytest-cov>=6.0.0",
    "pytest-asyncio>=0.25.0",
    "black>=24.0.0",
    "ruff>=0.9.0",
    "mypy>=1.14.0",
    "types-requests>=2.31.0.0",
    "types-PyYAML>=6.0.0.0",
    "pre-commit>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/BernardUriza/free-intelligence"
Repository = "https://github.com/BernardUriza/free-intelligence.git"
Documentation = "https://github.com/BernardUriza/free-intelligence/tree/main/docs"

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]
exclude = ["tests*", "apps*"]

[tool.black]
line-length = 100
target-version = ["py314"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | node_modules
)/
'''

[tool.ruff]
line-length = 100
target-version = "py314"
# Exclude CLI tools (development scripts with different formatting)
exclude = ["backend/src/fi_cli/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["backend"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/node_modules/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
fail_under = 70.0

[tool.coverage.html]
directory = "htmlcov"

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
check_untyped_defs = true
no_implicit_optional = true
warn_incomplete_stub = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_untyped_calls = false
ignore_missing_imports = true
plugins = []

[[tool.mypy.overrides]]
module = [
    "h5py.*",
    "faster_whisper.*",
    "ffmpeg.*",
    "sentence_transformers.*",
    "ollama.*",
    "anthropic.*",
]
ignore_missing_imports = true

[tool.pyright]
include = ["backend", "tests"]
exclude = ["**/__pycache__", ".venv", "node_modules"]
typeCheckingMode = "standard"
reportMissingTypeStubs = false
reportMissingImports = false
reportOptionalMemberAccess = false
reportOptionalSubscript = false
reportPrivateUsage = false
pythonVersion = "3.14"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "SIM", "ARG", "RUF"]
ignore = [
    "E501",   # Line too long (handled by formatter)
    "E402",   # Module level import not at top (sometimes necessary)
    "E721",   # Use is/is not for type comparisons
    "E722",   # Bare except (sometimes intentional)
    "UP006",  # Use `type` instead of `Type` (backwards compat)
    "UP007",  # Use `X | Y` instead of `Union` (backwards compat)
    "UP035",  # Deprecated typing imports (backwards compat)
    "UP037",  # Remove quotes from type annotation (backwards compat)
    "ARG001", # Unused function argument (often intentional in APIs)
    "ARG002", # Unused method argument (often intentional in APIs)
    "ARG005", # Unused lambda argument
    "B008",   # Function call in default argument (sometimes intentional)
    "B017",   # pytest.raises without match
    "B019",   # lru_cache on methods (intentional caching)
    "B904",   # raise without from in except (too noisy)
    "N806",   # Variable name should be lowercase (sometimes intentional)
    "N818",   # Exception name should end with Error
    "SIM102", # Nested if (readability preference)
    "SIM103", # Return condition directly
    "SIM105", # Use contextlib.suppress
    "SIM115", # Use context manager for open
    "SIM117", # Multiple with statements
    "SIM118", # Use `in dict` instead of `in dict.keys()`
    "RUF001", # Ambiguous unicode character (Spanish text)
    "RUF012", # Mutable class attributes (handled by dataclasses)
    "RUF022", # __all__ not sorted
    "RUF034", # Useless if-else
    "RUF059", # Unused unpacked variable
    "A001",   # Variable shadowing builtin
    "F401",   # Imported but unused (sometimes intentional)
    "F403",   # Star import used (legacy code)
    "F405",   # May be undefined from star import (legacy code)
    "F841",   # Local variable assigned but never used (sometimes intentional)
]
typing-modules = ["typing"]

[tool.ruff.lint.isort]
known-first-party = ["backend"]
sections = { "FUTURE" = ["future"], "STANDARD_LIBRARY" = ["sys", "os", "pathlib"], "THIRD_PARTY" = ["h5py", "structlog", "PyYAML", "pydantic", "fastapi", "uvicorn", "anthropic", "ollama", "sentence-transformers", "torch", "transformers", "jsonschema", "python-dateutil", "py-trello", "pyarrow", "httpx", "aiohttp", "pdfplumber", "python-docx"], "FIRST_PARTY" = ["backend"], "LOCAL_FOLDER" = ["."] }
