[project]
name = "fi-monitor"
version = "1.0.6"
requires-python = ">=3.14"

dependencies = []  # Production deps en rag_service/requirements.txt

[project.optional-dependencies]
dev = [
    "pytest>=9.0.1",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "httpx>=0.27.0",  # Para TestClient de FastAPI
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["rag_service"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
precision = 2
show_missing = true
fail_under = 80.0  # Target: 80%+ coverage
