[project]
name = "fi_storage"
version = "0.1.0"
description = "Free Intelligence - Storage Layer (HDF5, repositories)"
requires-python = ">=3.11"
readme = "README.md"
license = {text = "Apache-2.0"}
classifiers = ["Typing :: Typed"]
dependencies = [
    "h5py>=3.0.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = ["pytest", "mypy", "ruff"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
