[package]
name = "aurity-desktop"
version = "1.0.0"
description = "Aurity Desktop - Medical AI Assistant"
authors = ["Bernard Uriza <bernard@aurity.io>"]
edition = "2021"
license = "Proprietary"
repository = "https://github.com/BernardUriza/free-intelligence"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
