[package]
name = "aurity-desktop"
version = "1.0.0"
description = "Aurity Desktop - Medical AI Assistant"
authors = ["Bernard Uriza <bernard@aurity.io>"]
edition = "2021"
license = "Proprietary"
repository = "https://github.com/BernardUriza/free-intelligence"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
tauri-plugin-deep-link = "2"           # Deep links for OAuth callback (aurity://)
# Note: single-instance removed - causes config deserialization issues in Tauri 2.x
# Deep links on macOS work via on_open_url(), Windows/Linux can add this back later
tauri-plugin-opener = "2"              # Open browser for OAuth flow
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
dirs = "5.0"  # For getting home directory (5.0.1 verified on crates.io)

# Auth0 OAuth 2.0 + PKCE dependencies
sha2 = "0.10"          # SHA256 for PKCE challenge
base64 = "0.22"        # Base64 URL-safe encoding for PKCE
rand = "0.8"           # Random generation for state/verifier
urlencoding = "2.1"    # URL encoding for OAuth params
chrono = { version = "0.4", features = ["serde"] }  # Token expiration handling
keyring = "3"          # Cross-platform secure credential storage (Keychain/Credential Manager/libsecret)
url = "2.5"            # URL parsing for callback handling

# License validation dependencies
ed25519-dalek = { version = "2", features = ["pem"] }  # Ed25519 signature verification
data-encoding = "2"    # Base32 decoding for license keys
hostname = "0.4"       # Machine fingerprint for license binding

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
