[package]
name = "aurity-desktop"
version = "1.0.6"
description = "Aurity Desktop - Medical AI Assistant"
authors = ["Bernard Uriza <bernard@aurity.io>"]
edition = "2021"
license = "Proprietary"
repository = "https://github.com/BernardUriza/free-intelligence"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
tauri-plugin-deep-link = "2"           # Deep links for OAuth callback (aurity://)
tauri-plugin-updater = "2"             # Auto-updater with signature verification
# Note: single-instance removed - causes config deserialization issues in Tauri 2.x
# Deep links on macOS work via on_open_url(), Windows/Linux can add this back later
tauri-plugin-opener = "2"              # Open browser for OAuth flow
tauri-plugin-dialog = "2"              # File picker for license import
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }  # Added stream for download progress
futures-util = "0.3"   # For streaming downloads with progress
dirs = "5.0"  # For getting home directory (5.0.1 verified on crates.io)

# Auth0 OAuth 2.0 + PKCE dependencies
sha2 = "0.10"          # SHA256 for PKCE challenge
base64 = "0.22"        # Base64 URL-safe encoding for PKCE
rand = "0.8"           # Random generation for state/verifier
urlencoding = "2.1"    # URL encoding for OAuth params
chrono = { version = "0.4", features = ["serde"] }  # Token expiration handling
keyring = "3"          # Cross-platform secure credential storage (Keychain/Credential Manager/libsecret)
url = "2.5"            # URL parsing for callback handling

# License validation dependencies
ed25519-dalek = { version = "2", features = ["pem"] }  # Ed25519 signature verification
data-encoding = "2"    # Base32 decoding for license keys
hostname = "0.4"       # Machine fingerprint for license binding

# MSRV compatibility: pin time to 0.3.44 (0.3.46+ requires Rust 1.88 which isn't released yet)
time = "=0.3.44"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
opt-level = "z"          # Optimize for size (más agresivo que "s")
lto = true               # Link-time optimization (cross-crate)
strip = true             # Remove debug symbols (~30% size reduction)
codegen-units = 1        # Mejor optimización (trade-off: build más lento)
panic = "abort"          # No unwind tables (reduce size)
