[package]
name = "fi-monitor"
version = "1.0.1"
description = "FI Edge Monitor - Ollama Tunnel Manager"
authors = ["AURITY"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
tauri-plugin-notification = "2"
tauri-plugin-autostart = "2"
tauri-plugin-updater = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
gethostname = "0.4"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"
dirs = "5.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
opt-level = "z"          # Optimize for size (más agresivo que "s")
lto = true               # Link-time optimization (cross-crate)
strip = true             # Remove debug symbols (~30% size reduction)
codegen-units = 1        # Mejor optimización (trade-off: build más lento)
panic = "abort"          # No unwind tables (reduce size)
