[project]
name = "fi-devtools"
version = "0.1.0"
description = "Free Intelligence DevTools CLI"
requires-python = ">=3.14"
readme = "README.md"
license = {text = "MIT"}
dependencies = [
  "typer>=0.12.0",
]

[project.scripts]
fi = "fi_devtools.cli:app"

[project.optional-dependencies]
dev = [
  "pytest>=9.0.1",
]

[build-system]
requires = ["hatchling>=1.26.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Flat layout: directorio actual → fi_devtools en el wheel
[tool.hatch.build.targets.wheel.force-include]
"__init__.py" = "fi_devtools/__init__.py"
"__main__.py" = "fi_devtools/__main__.py"
"cli.py" = "fi_devtools/cli.py"
"_runner.py" = "fi_devtools/_runner.py"
"lint" = "fi_devtools/lint"
"analysis" = "fi_devtools/analysis"
"migrate" = "fi_devtools/migrate"
"recovery" = "fi_devtools/recovery"
"ci" = "fi_devtools/ci"

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q"
